@@ -57,8 +57,8 @@ namespace MeGUI
                      overwriteStats, keep2of3passOutput, autoUpdate, deleteCompletedJobs, deleteIntermediateFiles,
                      deleteAbortedOutput, openProgressWindow, useadvancedtooltips, autoSelectHDStreams, autoscroll, 
                      alwaysOnTop, safeProfileAlteration, usehttpproxy, addTimePosition, alwaysbackupfiles, bUseITU,
-                     forcerawavcextension, bAutoLoadDG, bAutoStartQueueStartup, bAlwaysMuxMKV, b64bitX264,
-                     bEnsureCorrectPlaybackSpeed, bOpenAVSInThread, bUseDGIndexNV, bUseNeroAacEnc, bExternalProgramsSet;
+                     forcerawavcextension, bAutoLoadDG, bAutoStartQueueStartup, bAlwaysMuxMKV, b64bitX264, bUseQAAC,
+                     bEnsureCorrectPlaybackSpeed, bOpenAVSInThread, bUseDGIndexNV, bUseNeroAacEnc;
         private ulong audioSamplesPerUpdate;
         private decimal forceFilmThreshold, acceptableFPSError;
         private int nbPasses, acceptableAspectError, autoUpdateServerSubList, minComplexity, updateFormSplitter,
@@ -195,7 +195,7 @@ namespace MeGUI
             startColumnWidth = 55;
             endColumnWidth = 55;
             fpsColumnWidth = 35;
-            bEnsureCorrectPlaybackSpeed = bUseDGIndexNV = bUseNeroAacEnc = bExternalProgramsSet = false;
+            bEnsureCorrectPlaybackSpeed = bUseDGIndexNV = bUseNeroAacEnc = bUseQAAC = false;
             ffmsThreads = 1;
             appendToForcedStreams = "";
             ocGUIMode = OCGUIMode.Default;
@@ -1127,12 +1127,7 @@ namespace MeGUI
 
         public bool UseDGIndexNV
         {
-            get 
-            {
-                if (!bExternalProgramsSet)
-                    SetExternalPrograms();
-                return bUseDGIndexNV; 
-            }
+            get { return bUseDGIndexNV; }
             set { bUseDGIndexNV = value; }
         }
 
@@ -1153,22 +1148,14 @@ namespace MeGUI
 
         public bool UseNeroAacEnc
         {
-            get 
-            {
-                if (!bExternalProgramsSet)
-                    SetExternalPrograms();
-                return bUseNeroAacEnc; 
-            }
+            get { return bUseNeroAacEnc; }
             set { bUseNeroAacEnc = value; }
         }
 
-        /// <summary>
-        /// if the external programs (nero & dgindexnv) have been already set
-        /// </summary>
-        public bool ExternalProgramsSet
+        public bool UseQAAC
         {
-            get { return bExternalProgramsSet; }
-            set { bExternalProgramsSet = value; }
+            get { return bUseQAAC; }
+            set { bUseQAAC = value; }
         }
 
         #endregion
@@ -1185,27 +1172,14 @@ namespace MeGUI
         }
 
         #region Methods
-#warning Deprecated after next stable release
-        private void SetExternalPrograms()
-        {
-            // check NeroAacEnc
-            bUseNeroAacEnc = System.IO.File.Exists(neroAacEncPath);
-
-            // check if the DGIndexNV license file is available
-            if (System.IO.File.Exists(MainForm.Instance.Settings.DgnvIndexPath) && 
-                System.IO.File.Exists(System.IO.Path.Combine(System.IO.Path.GetDirectoryName(MainForm.Instance.Settings.DgnvIndexPath), "license.txt")))
-                bUseDGIndexNV = true;
-            else
-                bUseDGIndexNV = false;
-
-            bExternalProgramsSet = true;
-        }
-
         public bool IsNeroAACEncAvailable()
         {
-            if (!bExternalProgramsSet)
-                SetExternalPrograms();
             return bUseNeroAacEnc && System.IO.File.Exists(neroAacEncPath);
+        }
+
+        public bool IsQAACAvailable()
+        {
+            return bUseQAAC && System.IO.File.Exists(qaacPath);
         }
 
         public bool IsDGIIndexerAvailable()
