@@ -1,3 +1,5 @@
+2231 [QAAC] as external dependencies are required the encoder is disabled by default
+            enable it in the MeGUI settings and make sure that CoreAudioToolbox.dll is available
 2230 [HD Streams Extractor] improved error handling
 2229 [OneClick] fixed a problem during Blu-ray processing when source has no subtitle/audio track
 2228 [OneClick] fixed a problem starting OneClick after a new install
